test(passkeys): review counter implementation
- integrate JWT and refresh tokens
- allow `/auth/passkey/auth/finish` and `/auth/passkey/auth/start` in SecurityConfig
- add correlated tests

Ref #48

Co-authored-by: Clara Ferreira <mariaferreira578.9cl@gmail.com>