@@ -2,19 +2,27 @@ package com.example.backend.service;
 
 import com.example.backend.domain.Passkey;
 import com.example.backend.domain.User;
-import com.example.backend.dto.auth.LoginResponse;
 import com.example.backend.dto.passkey.PasskeyResponse;
 import com.example.backend.exception.BusinessException;
+import com.example.backend.exception.PasskeyAuthenticationFailedException;
 import com.example.backend.exception.ResourceNotFoundException;
 import com.example.backend.repository.PasskeyRepository;
 import com.example.backend.repository.UserRepository;
+import com.example.backend.security.AccessToken;
+import com.example.backend.security.ClientContext;
+import com.example.backend.security.JwtService;
+import com.example.backend.security.RefreshTokenPair;
+import com.example.backend.security.RefreshTokenResult;
+import com.example.backend.service.auth.RefreshTokenService;
 import com.yubico.webauthn.AssertionRequest;
+import com.yubico.webauthn.AssertionResult;
+import com.yubico.webauthn.FinishAssertionOptions;
 import com.yubico.webauthn.FinishRegistrationOptions;
 import com.yubico.webauthn.RelyingParty;
 import com.yubico.webauthn.StartAssertionOptions;
 import com.yubico.webauthn.StartRegistrationOptions;
-import com.yubico.webauthn.data.AuthenticatorAttestationResponse;
 import com.yubico.webauthn.data.AuthenticatorAssertionResponse;
+import com.yubico.webauthn.data.AuthenticatorAttestationResponse;
 import com.yubico.webauthn.data.AuthenticatorSelectionCriteria;
 import com.yubico.webauthn.data.ByteArray;
 import com.yubico.webauthn.data.ClientAssertionExtensionOutputs;
@@ -25,54 +33,79 @@ import com.yubico.webauthn.data.PublicKeyCredentialRequestOptions;
 import com.yubico.webauthn.data.ResidentKeyRequirement;
 import com.yubico.webauthn.data.UserIdentity;
 import com.yubico.webauthn.data.UserVerificationRequirement;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 
 import java.time.Clock;
 import java.time.Instant;
 import java.util.List;
 import java.util.Locale;
 import java.util.Optional;
+import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
-import java.util.stream.Collectors;
-
+import java.util.function.Function;
 
 @Service
 public class PasskeyService {
 
+	private static final Logger LOGGER = LoggerFactory.getLogger(PasskeyService.class);
+	private static final Logger AUDIT_LOG = LoggerFactory.getLogger("AUDIT");
+
 	private final RelyingParty relyingParty;
 	private final UserRepository userRepository;
 	private final PasskeyRepository passkeyRepository;
+	private final JwtService jwtService;
+	private final RefreshTokenService refreshTokenService;
 	private final Clock clock;
 	private final ConcurrentMap<String, PublicKeyCredentialCreationOptions> pendingRegistrationOptions;
 	private final ConcurrentMap<String, AssertionRequest> pendingAuthenticationOptions;
-	
-	private static final Logger log = LoggerFactory.getLogger(PasskeyService.class);
-	private static final Logger AUDIT_LOG = LoggerFactory.getLogger("AUDIT");
+	private final Function<String, PublicKeyCredential<AuthenticatorAssertionResponse, ClientAssertionExtensionOutputs>> assertionParser;
 
 	@Autowired
-	public PasskeyService(RelyingParty relyingParty, UserRepository userRepository, PasskeyRepository passkeyRepository) {
-		this(relyingParty, userRepository, passkeyRepository, Clock.systemUTC(), new ConcurrentHashMap<>(), new ConcurrentHashMap<>());
+	public PasskeyService(
+			RelyingParty relyingParty,
+			UserRepository userRepository,
+			PasskeyRepository passkeyRepository,
+			JwtService jwtService,
+			RefreshTokenService refreshTokenService
+	) {
+		this(
+				relyingParty,
+				userRepository,
+				passkeyRepository,
+				jwtService,
+				refreshTokenService,
+				Clock.systemUTC(),
+				new ConcurrentHashMap<>(),
+				new ConcurrentHashMap<>(),
+				PasskeyService::parseAssertionCredential
+		);
 	}
 
 	PasskeyService(
 			RelyingParty relyingParty,
 			UserRepository userRepository,
 			PasskeyRepository passkeyRepository,
+			JwtService jwtService,
+			RefreshTokenService refreshTokenService,
 			Clock clock,
 			ConcurrentMap<String, PublicKeyCredentialCreationOptions> pendingRegistrationOptions,
-			ConcurrentMap<String, AssertionRequest> pendingAuthenticationOptions
+			ConcurrentMap<String, AssertionRequest> pendingAuthenticationOptions,
+			Function<String, PublicKeyCredential<AuthenticatorAssertionResponse, ClientAssertionExtensionOutputs>> assertionParser
 	) {
 		this.relyingParty = relyingParty;
 		this.userRepository = userRepository;
 		this.passkeyRepository = passkeyRepository;
+		this.jwtService = jwtService;
+		this.refreshTokenService = refreshTokenService;
 		this.clock = clock;
 		this.pendingRegistrationOptions = pendingRegistrationOptions;
 		this.pendingAuthenticationOptions = pendingAuthenticationOptions;
+		this.assertionParser = assertionParser;
 	}
 
 	@Transactional
@@ -153,7 +186,7 @@ public class PasskeyService {
 						passkey.getLastUsed(),
 						passkey.isActive()
 				))
-				.collect(Collectors.toList());
+				.toList();
 	}
 
 	@Transactional
@@ -170,6 +203,83 @@ public class PasskeyService {
 		passkeyRepository.save(passkey);
 	}
 
+	@Transactional
+	public PublicKeyCredentialRequestOptions startAuthentication(String email) {
+		String normalizedEmail = normalizeEmail(email);
+		findUserByEmail(normalizedEmail);
+
+		AssertionRequest assertionRequest = relyingParty.startAssertion(
+				StartAssertionOptions.builder()
+						.username(Optional.of(normalizedEmail))
+						.build()
+		);
+
+		pendingAuthenticationOptions.put(normalizedEmail, assertionRequest);
+		return assertionRequest.getPublicKeyCredentialRequestOptions();
+	}
+
+	@Transactional
+	public RefreshTokenResult finishAuthentication(String email, String credentialJson, ClientContext clientContext) {
+		String normalizedEmail = normalizeEmail(email);
+		User user = findUserByEmail(normalizedEmail);
+		AssertionRequest assertionRequest = pendingAuthenticationOptions.remove(normalizedEmail);
+		if (assertionRequest == null) {
+			throw new PasskeyAuthenticationFailedException();
+		}
+
+		try {
+			PublicKeyCredential<AuthenticatorAssertionResponse, ClientAssertionExtensionOutputs> credential =
+					assertionParser.apply(credentialJson);
+			AssertionResult result = relyingParty.finishAssertion(
+					FinishAssertionOptions.builder()
+							.request(assertionRequest)
+							.response(credential)
+							.build()
+			);
+
+			if (!result.isSuccess()) {
+				throw new PasskeyAuthenticationFailedException();
+			}
+
+			Passkey passkey = passkeyRepository.findByCredentialIdAndActiveTrue(credential.getId().getBase64Url())
+					.orElseThrow(PasskeyAuthenticationFailedException::new);
+
+			if (!passkey.getUser().getId().equals(user.getId())) {
+				throw new PasskeyAuthenticationFailedException();
+			}
+
+			validateAndUpdateCounter(passkey, result.getSignatureCount(), normalizedEmail, clientContext.ipAddress());
+
+			UUID sessionId = UUID.randomUUID();
+			AccessToken accessToken = jwtService.issueAccessToken(user, clientContext, sessionId);
+			RefreshTokenPair refreshToken = refreshTokenService.issueForLogin(user, clientContext, sessionId);
+			return new RefreshTokenResult(accessToken, refreshToken.rawToken());
+		} catch (PasskeyAuthenticationFailedException exception) {
+			throw exception;
+		} catch (Exception exception) {
+			LOGGER.warn("Falha na validacao da credencial de passkey para usuario: {}", normalizedEmail);
+			throw new PasskeyAuthenticationFailedException();
+		}
+	}
+
+	private void validateAndUpdateCounter(Passkey passkey, long clientCounter, String email, String clientIp) {
+		long storedCounter = passkey.getCounter();
+		if (clientCounter <= storedCounter) {
+			AUDIT_LOG.warn(
+					"Possivel clonagem de autenticador detectada. user={}, credentialPrefix={}, storedCounter={}, clientCounter={}, ip={}",
+					email,
+					credentialPrefix(passkey.getCredentialId()),
+					storedCounter,
+					clientCounter,
+					clientIp
+			);
+			throw new PasskeyAuthenticationFailedException();
+		}
+
+		passkey.updateCounter(clientCounter, Instant.now(clock));
+		passkeyRepository.save(passkey);
+	}
+
 	private User findUserByEmail(String email) {
 		return userRepository.findByEmailIgnoreCase(email)
 				.orElseThrow(ResourceNotFoundException::new);
@@ -179,87 +289,21 @@ public class PasskeyService {
 		return email.trim().toLowerCase(Locale.ROOT);
 	}
 
-	@Transactional
-	public PublicKeyCredentialRequestOptions startAuthentication(String email) {
-		String normalizedEmail = normalizeEmail(email);
-		findUserByEmail(normalizedEmail); 
-		
-		AssertionRequest assertionRequest = relyingParty.startAssertion(
-			StartAssertionOptions.builder()
-				.username(Optional.of(normalizedEmail))
-				.build()
-		);
-		
-		pendingAuthenticationOptions.put(normalizedEmail, assertionRequest);
-		
-		return assertionRequest.getPublicKeyCredentialRequestOptions();
+	private static PublicKeyCredential<AuthenticatorAssertionResponse, ClientAssertionExtensionOutputs> parseAssertionCredential(
+			String credentialJson
+	) {
+		try {
+			return PublicKeyCredential.parseAssertionResponseJson(credentialJson);
+		} catch (Exception exception) {
+			throw new PasskeyAuthenticationFailedException();
+		}
 	}
 
-	@Transactional
-	public LoginResponse finishAuthentication(String email, String credentialJson, String clientIp) {
-		String normalizedEmail = normalizeEmail(email);
-		findUserByEmail(normalizedEmail); 
-		AssertionRequest assertionRequest = pendingAuthenticationOptions.remove(normalizedEmail);		
-		if (assertionRequest == null) {
-			throw new BusinessException("Autenticação de passkey nao iniciada.");
+	private String credentialPrefix(String credentialId) {
+		if (credentialId == null || credentialId.length() <= 8) {
+			return "[redacted]";
 		}
 
-		try {
-            PublicKeyCredential<AuthenticatorAssertionResponse, ClientAssertionExtensionOutputs> credential =
-                    PublicKeyCredential.parseAssertionResponseJson(credentialJson);
-
-            com.yubico.webauthn.AssertionResult result = relyingParty.finishAssertion(
-                    com.yubico.webauthn.FinishAssertionOptions.builder()
-                            .request(assertionRequest)
-                            .response(credential)
-                            .build()
-            );
-
-            if (!result.isSuccess()) {
-                throw new BusinessException("Assinatura digital inválida.");
-            }
-
-            String credentialIdStr = credential.getId().getBase64Url();
-            Passkey passkey = passkeyRepository.findByCredentialIdAndActiveTrue(credentialIdStr)
-                    .orElseThrow(ResourceNotFoundException::new);
-
-            long clientCounter = result.getSignatureCount();
-            long storedCounter = passkey.getCounter();
-
-            if (clientCounter <= storedCounter) {
-                AUDIT_LOG.error("[CLONAGEM DETECTADA] Usuário: {}, Credencial: {}, Counter DB: {}, Counter Client: {}, IP: {}", 
-                        normalizedEmail, credentialIdStr, storedCounter, clientCounter, getClientIp());
-
-				log.error("[AUDITORIA - SEGURANÇA] Bloqueio preventivo: Possível clonagem de autenticador! Usuário: {}. Credencial: {}. Counter recebido: {}, Counter em banco: {}", 
-                        normalizedEmail, credentialIdStr, clientCounter, storedCounter);
-                
-                throw new BusinessException("Inconsistência de hardware de segurança detectada.");
-            }
-
-            passkey.updateCounter(clientCounter, Instant.now(clock)); 
-    
-            
-            passkeyRepository.save(passkey);
-            log.info("Usuário {} autenticado com sucesso via Passkey.", normalizedEmail);
-
-            String accessToken = "MOCK_JWT_ACCESS_TOKEN";  
-            //String refreshToken = "MOCK_REFRESH_TOKEN"; 
-
-            return new LoginResponse(accessToken, 
-					"Bearer", 
-					3600
-			);
-
-        } catch (BusinessException e) {
-            throw e; 
-        } catch (Exception exception) {
-			log.error("Erro na validação da credencial para usuário: {}", normalizedEmail, exception);
-
-            throw new BusinessException("Falha na validação da credencial.");
-        }
-
+		return credentialId.substring(0, 8) + "...";
 	}
-	private String getClientIp() {
-        return "unknown";
-    }
 }
